--- a/NavigationApp/Base.lproj/Main.storyboard
+++ b/NavigationApp/Base.lproj/Main.storyboard
@@ -64,6 +64,10 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xmS-pE-uFT">
+                                <rect key="frame" x="87" y="185" width="240" height="220"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="mSQ-Bm-XM3"/>
                         <color key="backgroundColor" systemColor="systemTealColor"/>
@@ -74,12 +78,13 @@
                     </view>
                     <navigationItem key="navigationItem" title="두번째 페이지" id="VXh-Tn-IPA"/>
                     <connections>
+                        <outlet property="imageView" destination="xmS-pE-uFT" id="M2Q-Ix-N6g"/>
                         <outlet property="nameLabel" destination="O7r-D9-AIW" id="4Hw-fV-cEl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5gK-7K-JAN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1580" y="66"/>
+            <point key="canvasLocation" x="1579.7101449275362" y="65.625"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="wc6-jr-day">
